More docs in sidebar.

--- a/admin/views/base/_textile.haml
+++ b/admin/views/base/_textile.haml
@@ -4,7 +4,7 @@
     %h4 Internal Links
     %p [[Page Title]]
     %h4 Code Highlighting
-    %p pre[ruby], pre[html]
+    %p pre[ruby], pre[html], pre[bash], pre[erb]
     %h4
       Phrase modifiers:
     %p
