--- a/public/admin/stylesheets/base.css
+++ b/public/admin/stylesheets/base.css
@@ -57,7 +57,7 @@ body{font-size:12px;font-family:sans-serif;}
 .table{width:100%;border-collapse:collapse;margin-bottom:15px;}
 .table th{padding:10px;font-weight:bold;text-align:left;}
 .table th.first{width:30px;}
-.table th.last{width:200px;}
+/*.table th.last{width:200px;}*/
 .table .checkbox{margin-left:10px;}
 .table td{padding:10px;}
 .table td.last{text-align:right;}
