--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -3,6 +3,7 @@ a{color:#222222;text-decoration:none;}
 a:hover{text-decoration:underline;color:#3D3D3D;}
 h1{font-weight:normal;font-size:26px;}
 h2{font-weight:normal;border-top:4px solid #CFCFCF;margin-top:20px;padding-top:15px;}
+table th{padding:5px;border-bottom:2px solid #CFCFCF;}
 table td{padding:5px;border-bottom:1px solid #CFCFCF;}
 p{margin-top:10px;margin-bottom:10px;}
 #header{border-bottom:2px solid #222222;}
