--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -3,8 +3,8 @@ a{color:#222222;text-decoration:none;}
 a:hover{text-decoration:underline;color:#3D3D3D;}
 h1{font-weight:normal;font-size:26px;}
 h2{font-weight:normal;border-top:4px solid #CFCFCF;margin-top:20px;padding-top:15px;}
-table th{padding:5px;border-bottom:2px solid #CFCFCF;}
-table td{padding:5px;border-bottom:1px solid #CFCFCF;}
+table th{padding:5px 10px 5px 10px;border-bottom:2px solid #CFCFCF;}
+table td{padding:5px 10px 5px 10px;border-bottom:1px solid #CFCFCF;}
 p{margin-top:10px;margin-bottom:10px;}
 #header{border-bottom:2px solid #222222;}
 #footer{border-top:2px solid #222222; text-align:right;padding:5px 0px 20px 0px;margin-top:20px;}
