Fixed a minor typo on padrino index example

--- a/app/views/base/index.haml
+++ b/app/views/base/index.haml
@@ -4,8 +4,8 @@
 .grid_6.alpha.margin-top=image_tag("glass.png", :alt => "Padrino Ruby Framework")
 .grid_6.short-code.margin-top
   .l gem install padrino
-  .l padrino-gen project cool -d datamapper -b
-  .l padring-gen admin
+  .l padrino-gen project blog -d datamapper -b
+  .l padrino-gen admin
   .l padrino start
 .grid_4.omega
   %ul.features
