Added some notifier. Added comments in wiki. Added author to each content. Added a better style in blog and guides.
padrino rake author;

--- a/app/views/guides/show.haml
+++ b/app/views/guides/show.haml
@@ -3,6 +3,18 @@
     -title @guide.title
     %h1=@guide.title
     .content~@guide.body_formatted
+    %br
+    %br
+    %br
+    #disqus_thread
+    %script{ :type => "text/javascript", :src => "http://disqus.com/forums/padrinorb/embed.js" }
+    %noscript
+      %a{ :href => "http://disqus.com/forums/padrinorb/?url=ref" }
+        View the discussion thread.
+    %a.dsq-brlink{ :href => "http://disqus.com" }
+      blog comments powered by
+      %span.logo-disqus
+        Disqus
   -else
     %h1 Guide not found
     .content The guide requested is not available
