--- a/app/views/blog/index.haml
+++ b/app/views/blog/index.haml
@@ -11,10 +11,12 @@
       .align-right
         Posted in
         =post.categories.map(&:name).join(", ")
+        by
+        =post.author.full_name
         ="|"
         =time_ago_in_words(post.created_at || Time.now) + ' ago'
         ="|"
-        =link_to "0 Comments and 0 Reactions", url(:blog, :show, :id => post), :anchor => "disqus_thread"
+        =link_to "0 Comments", url(:blog, :show, :id => post), :anchor => "disqus_thread"
     .pagination=paginate_posts(@posts)
 .grid_3.prefix_1.omega.margin-top=partial "blog/sidebar"
 .clear
