--- a/app/views/guides/_sidebar.haml
+++ b/app/views/guides/_sidebar.haml
@@ -1,4 +1,4 @@
--if @guide
+-if @guide && @guide.body_chapters.present?
   %h3 Chapters
   %ul
     -@guide.body_chapters.each do |chapter|
@@ -8,3 +8,12 @@
 %ul
   -Guide.all(:draft => false).each do |guide|
     %li=link_to guide.title, url(:guides, :show, :id => guide)
+
+-if @guide
+  %h3 Info
+  %ul
+    %li 
+      Last edited by 
+      =@guide.author.full_name
+    %li="Edited " + time_ago_in_words(@guide.updated_at || Time.now) + ' ago'
+    %li=link_to "0 Comments", :anchor => :disqus_thread
