Password field in account.

--- a/admin/views/accounts/_form.haml
+++ b/admin/views/accounts/_form.haml
@@ -19,13 +19,13 @@
 .group
   =f.label :password
   =f.error_message_on :password
-  =f.text_field :password, :class => :text_field
+  =f.password_field :password, :class => :text_field
   %span.description Ex: a simple text
 
 .group
   =f.label :password_confirmation
   =f.error_message_on :password_confirmation
-  =f.text_field :password_confirmation, :class => :text_field
+  =f.password_field :password_confirmation, :class => :text_field
   %span.description Ex: a simple text
 
 .group
