Margin bottom for pre shouldn't be so large

--- a/public/stylesheets/highlighter.css
+++ b/public/stylesheets/highlighter.css
@@ -1,5 +1,5 @@
 .padrino-syntax{background-color:#FFF;color:#6B9CB8;padding:3px 5px;overflow:auto;font-size:12px;}
-.padrino-syntax pre{font-family:'DejaVu Sans Mono','Bitstream Vera Sans Mono','Courier','Terminal',monospace}
+.padrino-syntax pre{font-family:'DejaVu Sans Mono','Bitstream Vera Sans Mono','Courier','Terminal',monospace; margin-bottom:5px;}
 .padrino-syntax .c{color:#998;font-style:italic;}
 .padrino-syntax .err{color:#a61717;background-color:#e3d2d2;}
 .padrino-syntax .k{font-weight:bold;}
