Fixed typo on blog sidebar links

--- a/app/views/blog/_sidebar.haml
+++ b/app/views/blog/_sidebar.haml
@@ -25,6 +25,6 @@
 %h3 Links
 %ul
   %li=link_to "Twitter", "http://www.twitter.com/padrinorb", :target => :_blank
-  %li=link_to "Resository", "http://www.github.com/padrino/padrino-framework", :target => :_blank
+  %li=link_to "Repository", "http://www.github.com/padrino/padrino-framework", :target => :_blank
   %li=link_to "Issue Tracker", "http://www.github.com/padrino/padrino-framework/issues", :target => :_blank
   %li=link_to "Feeds", url(:blog, :index, :format => :rss), :target => :_blank
