--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -2,7 +2,7 @@ body{font-family:Georgia;color:#222222;}
 a{color:#222222;text-decoration:none;}
 a:hover{text-decoration:underline;color:#3D3D3D;}
 h1{font-weight:normal;font-size:26px;}
-h2{font-weight:normal;border-top:4px solid #CFCFCF;margin-top:20px;padding-top:15px;}
+h2{font-weight:normal;border-top:4px solid #CFCFCF;padding-top:15px;}
 p{margin-top:10px;margin-bottom:10px;}
 #header{border-bottom:2px solid #222222;}
 #footer{border-top:2px solid #222222; text-align:right;padding:5px 0px 20px 0px;margin-top:20px;}
