--- a/admin/views/notifier/guide_added.erb
+++ b/admin/views/notifier/guide_added.erb
@@ -2,7 +2,7 @@ Hi,
 
 <%= guide.author.full_name %> created a guide "<%= guide.title %>"
 
-you can see it here: <%= Notifier.base_url %><%= PadrinoWww.url(:guides, :show, :id => guide) %>
+you can see it here: <%= Notifier.base_url %><%= PadrinoWeb.url(:guides, :show, :id => guide) %>
 
 ---
 Best Regards
