--- a/admin/views/guides/index.haml
+++ b/admin/views/guides/index.haml
@@ -20,7 +20,7 @@
           %tr
             %td=link_to guide.id, url(:guides, :edit, :id => guide.id)
             %td=link_to guide.title, url(:guides, :edit, :id => guide.id)
-            %td=link_to PadrinoWww.url(:guides, :show, :id => guide), PadrinoWww.url(:guides, :show, :id => guide), :target => :_blank
+            %td=link_to PadrinoWeb.url(:guides, :show, :id => guide), PadrinoWeb.url(:guides, :show, :id => guide), :target => :_blank
             %td=link_to guide.draft? ? "Yes" : "No", url(:guides, :edit, :id => guide.id)
             %td=link_to l(guide.updated_at, :format => :short), url(:guides, :edit, :id => guide.id)
             %td.last
