--- a/admin/views/posts/index.haml
+++ b/admin/views/posts/index.haml
@@ -22,7 +22,7 @@
           %tr
             %td=link_to post.id, url(:posts, :edit, :id => post.id)
             %td=link_to post.title, url(:posts, :edit, :id => post.id)
-            %td=link_to PadrinoWww.url(:blog, :show, :id => post), PadrinoWww.url(:blog, :show, :id => post), :target => :_blank
+            %td=link_to PadrinoWeb.url(:blog, :show, :id => post), PadrinoWeb.url(:blog, :show, :id => post), :target => :_blank
             %td=link_to post.categories.map(&:name).join(", "), url(:posts, :edit, :id => post.id)
             %td=link_to post.tags, url(:posts, :edit, :id => post.id)
             %td=link_to post.draft? ? "Yes" : "No", url(:posts, :edit, :id => post.id)
