--- a/admin/views/posts/new.haml
+++ b/admin/views/posts/new.haml
@@ -1,7 +1,9 @@
 .block
   .secondary-navigation
     %ul.wat-cf
-      %li.first=link_to pat(:list), url(:posts, :index)
+      %li.first=link_to pat(:categories), url(:categories, :index)
+      %li=link_to pat(:list), url(:posts, :index)
+      %li=link_to pat(:categories), url(:categories, :index)
       %li.active=link_to pat(:new), url(:posts, :new)
   .content
     %h2.title
