--- a/admin/views/pages/_sidebar.haml
+++ b/admin/views/pages/_sidebar.haml
@@ -1,17 +1,26 @@
 .block
-  %h3 General
+  %h3 Labels
   .content
     %p
-      Use label
-      %b Menu Top
+      %b Menu
       for show the page in top menu
     %p
-      Label
       %b Home
-      is used for display text in home page
+      display text in home
     %p
-      Labels
-      %b Home - Feature
-      will be displayed in home
+      %b Home Feature
+      display features in home
+    %p
+      %b Home Code
+      display example code in home
+    %p
+      %b Home Admin
+      display slogan on padrino screen
+    %p
+      %b Home Slogan
+      display slogan in home
+    %p
+      %b Home Mic
+      display a text in home near mic img
 
 =partial('base/textile')
