* Finished "Page" section * Added top_up to our server in our public * Improved top_up design (now show a super great border!) * Added notifier on page add/edit with diff * Updated Gemfile to use latest padrino 0.9.4 * Fixed boot to work with all bundler > 0.9.7 * Fixed a problem in Gemfile with mongo_ext and rubygems 1.3.6

--- a/admin/views/pages/_sidebar.haml
+++ b/admin/views/pages/_sidebar.haml
@@ -23,4 +23,4 @@
       %b Home Mic
       display a text in home near mic img
 
-=partial('base/textile')
+=partial('base/textile') unless @hide_textitle
