--- a/app/views/base/index.haml
+++ b/app/views/base/index.haml
@@ -6,10 +6,10 @@
 .grid_4.omega
   %ul.features
     -Page.find_all_labeled(:home_feature).each_with_index do |feature, i|
-      %li=link_to feature.title.upcase, :anchor => feature.id, :toptions => "width = 400, type = dom, resizable = 0", :class => (:alternate if i%2==0)
+      %li=link_to feature.title.upcase, :anchor => feature.id, :toptions => "width = 600, type = dom, resizable = 0", :class => (:alternate if i%2==0)
 .clear
 
--Page.find_all_labeled(:feature).each do |feature|
+-Page.find_all_labeled(:home_feature).each do |feature|
   .feature{:id => feature.id, :style => "display:none"}
     %h3=feature.title
     ~feature.body_formatted
@@ -18,8 +18,8 @@
   =link_to image_tag("screens.jpg", :alt => "Admin"), image_path("login.png"), :toptions => "effect = appear, group = screenshoots", :class => :top_up
   =Page.find_labeled(:home_admin).try(:body_formatted)
 
-=link_to image_tag("dashboard.png", :alt => "Dashboard Page"), image_path("dashboard.png"), :toptions => "group = screenshoots", :style => "display:none"
-=link_to image_tag("index.png", :alt => "Index Page"), image_path("index.png"), :toptions => "group = screenshoots", :style => "display:none"
+=link_to image_tag("dashboard.png", :alt => "Dashboard Page"), image_path("dashboard.png"), :toptions => "effect = appear, group = screenshoots", :style => "display:none"
+=link_to image_tag("index.png", :alt => "Index Page"), image_path("index.png"), :toptions => "effect = appear, group = screenshoots", :style => "display:none"
 
 .margin-top~Page.find_labeled(:home).try(:body_formatted)
 
