--- a/admin/views/page_labels/index.haml
+++ b/admin/views/page_labels/index.haml
@@ -11,7 +11,7 @@
     .inner
       %table.table
         %tr
-          %th=mat(:page_label, :id)
+          %th.first=mat(:page_label, :id)
           %th=mat(:page_label, :name)
           %th=mat(:page_label, :description)
           %th.last="&nbsp;"
