--- a/admin/views/pages/index.haml
+++ b/admin/views/pages/index.haml
@@ -11,8 +11,7 @@
     .inner
       %table.table
         %tr
-          %th=mat(:page, :id)
-          %th=mat(:page, :title)
+          %th.first=mat(:page, :title)
           %th=mat(:page, :label)
           %th=mat(:page, :link)
           %th=mat(:page, :draft)
@@ -20,8 +19,7 @@
           %th.last="&nbsp;"
         -@pages.each do |page|
           %tr
-            %td=link_to page.id, url(:pages, :edit, :id => page.id)
-            %td=link_to page.title, url(:pages, :edit, :id => page.id)
+            %td.first=link_to page.title, url(:pages, :edit, :id => page.id)
             %td=link_to page.label.name, url(:pages, :edit, :id => page.id)
             %td=link_to PadrinoWeb.url(:pages, :show, :id => page), PadrinoWeb.url(:pages, :show, :id => page), :target => :_blank
             %td=link_to page.draft? ? "Yes" : "No", url(:pages, :edit, :id => page.id)
