--- a/admin/views/accounts/index.haml
+++ b/admin/views/accounts/index.haml
@@ -10,15 +10,13 @@
     .inner
       %table.table
         %tr
-          %th.first=mat(:account, :id)
-          %th=mat(:account, :name)
+          %th.first=mat(:account, :name)
           %th=mat(:account, :surname)
           %th=mat(:account, :email)
           %th.last="&nbsp;"
         -@accounts.each do |account|
           %tr
-            %td.first=link_to account.id, url(:accounts, :edit, :id => account.id)
-            %td=link_to account.name, url(:accounts, :edit, :id => account.id)
+            %td.first=link_to account.name, url(:accounts, :edit, :id => account.id)
             %td=link_to account.surname, url(:accounts, :edit, :id => account.id)
             %td=link_to account.email, url(:accounts, :edit, :id => account.id)
             %td.last
