--- a/admin/views/accounts/index.haml
+++ b/admin/views/accounts/index.haml
@@ -16,9 +16,9 @@
           %th.last="&nbsp;"
         -@accounts.each do |account|
           %tr
-            %td.first=link_to account.name, url(:accounts, :edit, :id => account.id)
-            %td=link_to account.surname, url(:accounts, :edit, :id => account.id)
-            %td=link_to account.email, url(:accounts, :edit, :id => account.id)
+            %td.first=account.name
+            %td=account.surname
+            %td=account.email
             %td.last
               =button_to pat(:edit), url(:accounts, :edit, :id => account.id), :method => :get, :class => :button_to 
               ="|"
