--- a/admin/views/categories/index.haml
+++ b/admin/views/categories/index.haml
@@ -16,7 +16,7 @@
           %th.last="&nbsp;"
         -@categories.each do |category|
           %tr
-            %td.first=link_to category.name, url(:categories, :edit, :id => category.id)
+            %td.first=category.name
             %td.last
               =button_to pat(:edit), url(:categories, :edit, :id => category.id), :method => :get, :class => :button_to 
               ="|"
