--- a/admin/views/guides/index.haml
+++ b/admin/views/guides/index.haml
@@ -17,10 +17,10 @@
           %th.last="&nbsp;"
         -@guides.each do |guide|
           %tr
-            %td.first=link_to guide.title, url(:guides, :edit, :id => guide.id)
+            %td.first=guide.title
             %td=link_to PadrinoWeb.url(:guides, :show, :id => guide), PadrinoWeb.url(:guides, :show, :id => guide), :target => :_blank
-            %td=link_to guide.draft? ? "Yes" : "No", url(:guides, :edit, :id => guide.id)
-            %td=link_to l(guide.updated_at, :format => :short), url(:guides, :edit, :id => guide.id)
+            %td=guide.draft? ? "Yes" : "No"
+            %td=l(guide.updated_at, :format => :short)
             %td.last
               =button_to pat(:edit), url(:guides, :edit, :id => guide.id), :method => :get, :class => :button_to 
               ="|"
