* Finished Search! Now search work across pages, wiki, posts !!!

--- a/app/views/guides/_sidebar.haml
+++ b/app/views/guides/_sidebar.haml
@@ -1,3 +1,5 @@
+=partial('base/search', :locals => { :where => url(:guides, :search) })
+
 -if @guide && @guide.body_chapters.present?
   %h3 Chapters
   %ul
