--- a/app/views/blog/_sidebar.haml
+++ b/app/views/blog/_sidebar.haml
@@ -1,15 +1,6 @@
--form_tag url(:blog, :index), :method => :get do
-  %p
-    =text_field_tag :q, :value => params[:q], :class => :text_field, :style => "width:88px"
-    =submit_tag "Search", :class => :button
-    -if params[:q] && params[:q].size > 0 && params[:q].size < 4
-      %em Write at least 4 chars
-    -if @search
-      %em
-        Your query search was
-        %strong.highlight highlighted
+=partial("base/search", :locals => { :where => url(:blog, :index) })
 
-%h3.margin-top Categories
+%h3 Categories
 %ul
   -Category.all.each do |category|
     -if category.post_count > 0
@@ -27,4 +18,4 @@
   %li=link_to "Twitter", "http://www.twitter.com/padrinorb", :target => :_blank
   %li=link_to "Repository", "http://www.github.com/padrino/padrino-framework", :target => :_blank
   %li=link_to "Issue Tracker", "http://www.github.com/padrino/padrino-framework/issues", :target => :_blank
-  %li=link_to "Feeds", url(:blog, :index, :format => :rss), :target => :_blank
+  %li=link_to "Feeds", url(:blog, :rss), :target => :_blank
