--- a/app/views/blog/index.haml
+++ b/app/views/blog/index.haml
@@ -17,6 +17,6 @@
         =time_ago_in_words(post.created_at || Time.now) + ' ago'
         ="|"
         =link_to "0 Comments", url(:blog, :show, :id => post), :anchor => "disqus_thread"
-    .pagination=paginate_posts(@posts)
+    .pagination=paginate(@posts, :blog, :index)
 .grid_3.prefix_1.omega.margin-top=partial "blog/sidebar"
 .clear
