From now all sidebars have same width. We need to truncate some of ours wiki titles.

--- a/app/views/guides/index.haml
+++ b/app/views/guides/index.haml
@@ -11,5 +11,5 @@
       .align-right=link_to "Continue reading", url(:guides, :show, :id => guide)
     .pagination=paginate(@guides, :guides, :search)
 
-.grid_4.omega.margin-top=partial "guides/sidebar"
+.grid_3.prefix_1.omega.margin-top=partial "guides/sidebar"
 .clear
