--- a/app/views/pages/show.haml
+++ b/app/views/pages/show.haml
@@ -7,5 +7,5 @@
     %h1 Page not found
     .content The page requested is not available
 
-.grid_4.omega.margin-top=partial "pages/sidebar"
+.grid_3.prefix_1.omega.margin-top=partial "pages/sidebar"
 .clear
