* Restore sidebar width.

--- a/app/views/blog/index.haml
+++ b/app/views/blog/index.haml
@@ -19,5 +19,5 @@
         =link_to "0 Comments", url(:blog, :show, :id => post), :anchor => "disqus_thread"
     .pagination=paginate(@posts, :blog, :index)
 
-.grid_3.prefix_1.omega.margin-top=partial "blog/sidebar"
+.grid_4.omega.margin-top=partial "blog/sidebar"
 .clear
