--- a/app/views/blog/show.haml
+++ b/app/views/blog/show.haml
@@ -17,5 +17,5 @@
       %span.logo-disqus
         Disqus
 
-.grid_3.prefix_1.omega.margin-top=partial "blog/sidebar"
+.grid_4.omega.margin-top=partial "blog/sidebar"
 .clear
