--- a/app/views/guides/show.haml
+++ b/app/views/guides/show.haml
@@ -16,5 +16,5 @@
     %h1 Guide not found
     .content The guide requested is not available
 
-.grid_3.prefix_1.omega.margin-top=partial "guides/sidebar"
+.grid_4.omega.margin-top=partial "guides/sidebar"
 .clear
