* Increase search width

--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -11,5 +11,5 @@
       .align-right=link_to "Continue reading", url(:pages, :show, :id => page)
     .pagination=paginate(@pages, :pages, :search)
 
-.grid_3.prefix_1.omega.margin-top=partial "pages/sidebar"
+.grid_4.omega.margin-top=partial "pages/sidebar"
 .clear
