--- a/app/views/base/_search.haml
+++ b/app/views/base/_search.haml
@@ -1,6 +1,6 @@
 -form_tag where, :method => :get do
-  .l
-    =text_field_tag :q, :value => params[:q], :class => :text_field, :style => "width:88px"
+  .align-right
+    =text_field_tag :q, :value => params[:q], :class => :text_field, :style => "width:140px"
     =submit_tag "Search", :class => :button
   -if params[:q] && params[:q].size > 0 && params[:q].size < 4
     %em Write at least 4 chars
