--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -3,9 +3,11 @@ a{color:#222222;text-decoration:none;}
 a:hover{text-decoration:underline;color:#3D3D3D;}
 h1{font-weight:normal;font-size:26px;}
 h2{font-weight:normal;border-top:4px solid #CFCFCF;padding-top:15px;}
+h3{font-weight:normal;}
 p{margin-top:10px;margin-bottom:10px;}
 ins{text-decoration:underline;}
 #dsq-content{border-top:1px solid #222;padding-top:15px;margin-top:30px;}
+#dsq-content h3{font-weight:bold;}
 #header{border-bottom:2px solid #222222;}
 #footer{border-top:2px solid #222222; text-align:right;padding:5px 0px 20px 0px;margin-top:20px;}
 ul.menu{margin-top:80px;font-size:16px;float:right;list-style-type:none;margin:0px;margin-top:75px;}
